# eroge_review

./: Makefile  Taskfile.yml
.serena/: project.yml
eroge_review_server/: .gitignore  README.md  pyproject.toml  vercel.json
eroge_review_server/db/: schema.sql
eroge_review_server/docs/: architect.md
eroge_review_server/scripts/: atlas_apply.sh  atlas_dry_run.sh  export_openapi.sh
eroge_review_server/src/: app.py
eroge_review_server/src/eroge_review_server/: __init__.py
eroge_review_server/src/eroge_review_server/common/: __init__.py
eroge_review_server/src/eroge_review_server/common/game_review/: __init__.py  command_service.py  exception.py  mapper.py  model.py  query_service.py
eroge_review_server/src/eroge_review_server/common/game_spec/: __init__.py  command_service.py  mapper.py  model.py  query_service.py  service.py
eroge_review_server/src/eroge_review_server/common/review/: __init__.py
eroge_review_server/src/eroge_review_server/common/review_score_stats/: command_service.py  mapper.py  model.py  query_service.py
eroge_review_server/src/eroge_review_server/common/utils/: datetime.py  pager.py  sqlmodel_mixins.py
eroge_review_server/src/eroge_review_server/console/: __init__.py  server.py
eroge_review_server/src/eroge_review_server/controller/: server.py
eroge_review_server/src/eroge_review_server/core/: __init__.py  config.py  db.py
eroge_review_server/src/eroge_review_server/showcase/: __init__.py  server.py
eroge_review_server/src/eroge_review_server/tools/: __init__.py  export_openapi.py
openapi/: console.yaml  showcase.yaml
(+100 files in other folders)
