[project]
name = "eroge-review-server"
version = "0.1.0"
description = "Eroge Review Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlmodel",
  "pydantic-settings",
  "pyyaml",
  "psycopg[binary]",
  "uuid6",
]

[tool.ruff]
line-length = 120
